# haskey

./: .gitignore  .travis.yml  LICENSE  README.md  haskey.cabal  stack.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
example/: Main.hs
src-unix/: FileIO.hs
src/Data/BTree/: Alloc.hs  Delete.hs  Fold.hs  Impure.hs  Insert.hs  Internal.hs  Lookup.hs  Primitives.hs  Pure.hs  Store.hs  TwoThree.hs
src/Data/BTree/Alloc/: Append.hs  Class.hs  Concurrent.hs  Concurrent.hs.orig  Debug.hs  PageReuse.hs  Transaction.hs
src/Data/BTree/Alloc/Concurrent/: Database.hs  Environment.hs  Meta.hs  Monad.hs  Monad.hs.orig  Overflow.hs
src/Data/BTree/Alloc/Concurrent/FreePages/: Query.hs  Save.hs  Tree.hs
src/Data/BTree/Impure/: Delete.hs  Fold.hs  Insert.hs  Lookup.hs  NonEmpty.hs  Overflow.hs  Setup.hs  Structures.hs
src/Data/BTree/Primitives/: Exception.hs  Height.hs  Ids.hs  Index.hs  Key.hs  Leaf.hs  Value.hs
src/Data/BTree/Pure/: Setup.hs  TwoThree.hs
src/Data/BTree/Store/: Binary.hs  Class.hs  Debug.hs  File.hs  InMemory.hs  Page.hs
src/Data/BTree/Utils/: IO.hs  List.hs  Map.hs  Monad.hs  RLock.hs  Vector.hs
src/Data/BTree/Utils/Monad/: Catch.hs  Except.hs
src/Data/BTree/Utils/STM/: Map.hs
src/Database/Haskey/: Store.hs
src/Database/Haskey/Alloc/: Concurrent.hs  Transaction.hs
src/Database/Haskey/Alloc/Concurrent/: Database.hs  Environment.hs  Meta.hs  Monad.hs  Overflow.hs
src/Database/Haskey/Alloc/Concurrent/FreePages/: Query.hs  Save.hs  Tree.hs
src/Database/Haskey/Alloc/Concurrent/Internal/: Database.hs  Environment.hs  Meta.hs  Monad.hs  Overflow.hs
src/Database/Haskey/Alloc/Concurrent/Internal/FreePages/: Query.hs  Save.hs  Tree.hs
src/Database/Haskey/Store/: Class.hs  File.hs  InMemory.hs  Page.hs
src/Database/Haskey/Utils/: IO.hs  Monad.hs  RLock.hs
src/Database/Haskey/Utils/Monad/: Catch.hs
src/Database/Haskey/Utils/STM/: Map.hs
tests/: Integration.hs  Properties.hs
tests/Integration/: CreateAndOpen.hs  WriteOpenRead.hs
tests/Integration/ExceptionHandling/: Concurrent.hs
tests/Integration/WriteOpenRead/: Append.hs  Concurrent.hs  PageReuse.hs  Transactions.hs
tests/Properties/: Fold.hs  Insert.hs  Primitives.hs  Pure.hs  Utils.hs
tests/Properties/Alloc/: Append.hs
tests/Properties/Impure/: Fold.hs  Insert.hs  Structures.hs
tests/Properties/Primitives/: Height.hs  Ids.hs  Index.hs  Leaf.hs
tests/Properties/Store/: Binary.hs  File.hs  Page.hs
