name:                haskey
version:             0.1.0.0
synopsis:            A transcatoinal, ACID compliant, embeddable key-value store.
description:
    Haskey is a transactional, ACID compliant, embeddable, scalable key-value
    store written entirely in Haskell.
homepage:            https://github.com/haskell-haskey
license:             BSD3
license-file:        LICENSE
author:              Henri Verroken, Steven Keuchel, George Karachalias
maintainer:          steven.keuchel@gmail.com
copyright:           Copyright (c) 2017, Henri Verroken, Steven Keuchel, George Karachalias
category:            Database
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md

library
  exposed-modules:
    Data.BTree.Alloc
    Data.BTree.Alloc.Class
    Data.BTree.Alloc.Concurrent
    Data.BTree.Alloc.Concurrent.Database
    Data.BTree.Alloc.Concurrent.Environment
    Data.BTree.Alloc.Concurrent.FreePages.Query
    Data.BTree.Alloc.Concurrent.FreePages.Save
    Data.BTree.Alloc.Concurrent.Meta
    Data.BTree.Alloc.Concurrent.Monad
    Data.BTree.Alloc.Transaction
    Data.BTree.Impure
    Data.BTree.Impure.Delete
    Data.BTree.Impure.Fold
    Data.BTree.Impure.Insert
    Data.BTree.Impure.Lookup
    Data.BTree.Impure.Structures
    Data.BTree.Primitives
    Data.BTree.Primitives.Height
    Data.BTree.Primitives.Ids
    Data.BTree.Primitives.Index
    Data.BTree.Primitives.Key
    Data.BTree.Primitives.Leaf
    Data.BTree.Primitives.Value
    Data.BTree.Pure
    Data.BTree.Pure.TwoThree
    Data.BTree.Store
    Data.BTree.Store.Binary
    Data.BTree.Store.Class
    Data.BTree.Store.File

  other-modules:
    Data.BTree.Utils.List
    Data.BTree.Utils.Map
    Data.BTree.Utils.Monad
    Data.BTree.Utils.STM.Map
    Data.BTree.Utils.Vector

  other-extensions:
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    GADTs
    KindSignatures
    MultiWayIf
    ScopedTypeVariables
    StandaloneDeriving

  build-depends:
    base                    >=4.7  && <5,
    binary                  >=0.6  && <0.9 || >0.9 && <1,
    bytestring              >=0.10 && <1,
    containers              >=0.5  && <1,
    focus                   >=0.1.2 && <0.2,
    hashable                >=1.2  && <1.3,
    list-t                  >=0.2  && <2,
    mtl                     >=2.1  && <3,
    stm                     >=2.1  && <3,
    stm-containers          >=0.2  && <1,
    transformers            >=0.3  && <1,
    vector                  >=0.10 && <1,
    vector-binary-instances >=0.2 && <0.3

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src

test-suite haskey-properties
  main-is:             Properties.hs
  type:                exitcode-stdio-1.0
  other-modules:
    Properties.Impure.Fold
    Properties.Impure.Insert
    Properties.Impure.Structures
    Properties.Primitives.Height
    Properties.Primitives.Ids
    Properties.Primitives.Index
    Properties.Primitives.Leaf
    Properties.Pure
    Properties.Store.Binary
    Properties.Store.File
    Properties.Utils

  build-depends:
    base          >=4.7  && <5,
    binary        >=0.6  && <0.9 || >0.9 && <1,
    bytestring    >=0.10 && <1,
    containers    >=0.5  && <1,
    data-ordlist  >=0.4  && <1,
    mtl           >=2.1  && <3,
    transformers  >=0.3  && <1,
    vector        >=0.10 && <1,

    QuickCheck                 >=2    && <3,
    test-framework             >=0.8  && <1,
    test-framework-quickcheck2 >=0.3  && <1,
    haskey

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      tests

test-suite haskey-integration
  main-is:             Integration.hs
  type:                exitcode-stdio-1.0
  other-modules:
    Integration.WriteOpenRead.Concurrent
    Integration.WriteOpenRead.Transactions

  build-depends:
    base          >=4.7  && <5,
    binary        >=0.6  && <0.9 || >0.9 && <1,
    bytestring    >=0.10 && <1,
    containers    >=0.5  && <1,
    directory     >=1.2  && <2,
    filepath      >=1.4  && <2,
    mtl           >=2.1  && <3,
    transformers  >=0.3  && <1,
    temporary     >=1.2  && <1.3,
    vector        >=0.10 && <1,

    QuickCheck    >=2    && <3,
    test-framework             >=0.8  && <1,
    test-framework-quickcheck2 >=0.3  && <1,
    haskey

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      tests

source-repository head
  type:     git
  location: https://github.com/haskell-haskey/haskey
