name:                haskey
version:             0.1.0.0
synopsis:            A transcatoinal, ACID compliant, embeddable key-value store.
description:
    Haskey is a transactional, ACID compliant, embeddable, scalable key-value
    store written entirely in Haskell.
homepage:            https://github.com/haskell-haskey
license:             BSD3
license-file:        LICENSE
author:              Henri Verroken, Steven Keuchel, George Karachalias
maintainer:          steven.keuchel@gmail.com
copyright:           Copyright (c) 2017, Henri Verroken, Steven Keuchel, George Karachalias
category:            Database
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  README.md

library
  exposed-modules:
    Data.BTree.Alloc
    Data.BTree.Alloc.Class
    Data.BTree.Alloc.Concurrent
    Data.BTree.Alloc.Concurrent.Database
    Data.BTree.Alloc.Concurrent.Environment
    Data.BTree.Alloc.Concurrent.FreePages.Query
    Data.BTree.Alloc.Concurrent.FreePages.Save
    Data.BTree.Alloc.Concurrent.FreePages.Tree
    Data.BTree.Alloc.Concurrent.Meta
    Data.BTree.Alloc.Concurrent.Monad
    Data.BTree.Alloc.Concurrent.Overflow
    Data.BTree.Alloc.Debug
    Data.BTree.Alloc.Transaction
    Data.BTree.Impure
    Data.BTree.Impure.Delete
    Data.BTree.Impure.Fold
    Data.BTree.Impure.Insert
    Data.BTree.Impure.Lookup
    Data.BTree.Impure.NonEmpty
    Data.BTree.Impure.Overflow
    Data.BTree.Impure.Setup
    Data.BTree.Impure.Structures
    Data.BTree.Primitives
    Data.BTree.Primitives.Height
    Data.BTree.Primitives.Ids
    Data.BTree.Primitives.Index
    Data.BTree.Primitives.Key
    Data.BTree.Primitives.Leaf
    Data.BTree.Primitives.Value
    Data.BTree.Pure
    Data.BTree.Pure.Setup
    Data.BTree.Store
    Data.BTree.Store.Binary
    Data.BTree.Store.Class
    Data.BTree.Store.File
    Data.BTree.Store.Page

  other-modules:
    Data.BTree.Utils.IO
    Data.BTree.Utils.List
    Data.BTree.Utils.Map
    Data.BTree.Utils.Monad
    Data.BTree.Utils.Monad.Catch
    Data.BTree.Utils.RLock
    Data.BTree.Utils.STM.Map
    Data.BTree.Utils.Vector
    FileIO

  other-extensions:
    DataKinds
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    GADTs
    KindSignatures
    MultiWayIf
    ScopedTypeVariables
    StandaloneDeriving

  build-depends:
    base                    >=4.7  && <5,
    adler32                 >=0.1  && <1,
    binary                  >=0.6  && <0.9 || >0.9 && <1,
    bytestring              >=0.10 && <1,
    containers              >=0.5  && <1,
    directory               >=1.2  && <2,
    exceptions              >=0.8.3 && <0.9,
    filepath                >=1.4  && <2,
    focus                   >=0.1.2 && <0.2,
    hashable                >=1.2  && <1.3,
    list-t                  >=0.2  && <2,
    lz4                     >=0.2  && <1,
    mtl                     >=2.1  && <3,
    semigroups              >=0.12 && <1,
    stm                     >=2.1  && <3,
    stm-containers          >=0.2  && <1,
    transformers            >=0.3  && <1,
    unix                    >=2.7.1.0 && <3,
    vector                  >=0.10 && <1

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  hs-source-dirs:      src-unix

test-suite haskey-properties
  main-is:             Properties.hs
  type:                exitcode-stdio-1.0
  other-modules:
    Properties.Impure.Fold
    Properties.Impure.Insert
    Properties.Impure.Structures
    Properties.Primitives.Height
    Properties.Primitives.Ids
    Properties.Primitives.Index
    Properties.Primitives.Leaf
    Properties.Pure
    Properties.Store.Page
    Properties.Utils

  build-depends:
    base          >=4.7  && <5,
    binary        >=0.6  && <0.9 || >0.9 && <1,
    bytestring    >=0.10 && <1,
    containers    >=0.5  && <1,
    data-ordlist  >=0.4  && <1,
    mtl           >=2.1  && <3,
    transformers  >=0.3  && <1,
    vector        >=0.10 && <1,

    QuickCheck                 >=2    && <3,
    test-framework             >=0.8  && <1,
    test-framework-quickcheck2 >=0.3  && <1,
    haskey

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      tests

test-suite haskey-integration
  main-is:             Integration.hs
  type:                exitcode-stdio-1.0
  other-modules:
    Integration.WriteOpenRead.Concurrent
    Integration.WriteOpenRead.Transactions

  build-depends:
    base          >=4.7  && <5,
    binary        >=0.6  && <0.9 || >0.9 && <1,
    bytestring    >=0.10 && <1,
    containers    >=0.5  && <1,
    directory     >=1.2  && <2,
    exceptions    >=0.8.3 && <0.9,
    mtl           >=2.1  && <3,
    transformers  >=0.3  && <1,
    temporary     >=1.2  && <1.3,
    vector        >=0.10 && <1,

    QuickCheck    >=2    && <3,
    test-framework             >=0.8  && <1,
    test-framework-quickcheck2 >=0.3  && <1,
    haskey

  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      tests

source-repository head
  type:     git
  location: https://github.com/haskell-haskey/haskey
